# sky-models

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bruneton_sky_model.cpp  bruneton_sky_model.h  hosek_wilkie_sky_model.cpp  hosek_wilkie_sky_model.h  main.cpp  preetham_sky_model.cpp  preetham_sky_model.h  sky_model.h  table_sky_model.cpp  table_sky_model.h
src/shader/: cubemap_fs.glsl  fs.glsl  fullscreen_fs.glsl  fullscreen_vs.glsl  sky_fs.glsl  sky_vs.glsl  vs.glsl
src/shader/sky_models/: table_common.glsl
src/shader/sky_models/bruneton/: atmosphere.glsl  copy_inscatter_1_cs.glsl  copy_inscatter_n_cs.glsl  copy_irradiance_cs.glsl  inscatter_1_cs.glsl  inscatter_n_cs.glsl  inscatter_s_cs.glsl  irradiance_1_cs.glsl  irradiance_n_cs.glsl  precompute_common.glsl  transmittance_cs.glsl
src/shader/sky_models/hosek_wilkie/: atmosphere.glsl  compute_tables_cs.glsl
src/shader/sky_models/preetham/: atmosphere.glsl  compute_tables_cs.glsl
